fix layout issues with homepage

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -34,6 +34,14 @@ body {
     height: 100% !important;
 }
 
+#mainWebsite {
+    top: 0px !important;
+    position: relative !important;
+    left: 0px;
+    width: 100% !important;
+    height: 100% !important;
+}
+
 .homeSection {
     padding: 45px !important;
 }
